# story-toolkit

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_FA.md  SECURITY.md  SECURITY_TEST_SUMMARY.md  milad_test.py  paper.bib  paper.md  pyproject.toml  requirements-dev.txt  requirements-export.txt  requirements-llm.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: pylint.yml  security.yml  static.yml  tests.yml  testss.yml
docs/: index.html
docs/eng/: api.html  index.html  quickstart.html  script.js  styles.css
docs/fa-ir/: api.html  index.html  quickstart.html  script.js  styles.css
examples/: __init__.py  advanced_example.py  example.py  simple_example.py
llm/: __init__.py  base.py  factory.py
llm/backends/: __init__.py  anthropic_backend.py  local_backend.py  mock_backend.py  openai_backend.py
llm/prompts/: __init__.py  dialogue_prompts.py
story_toolkit/: __init__.py  __main__.py
story_toolkit/cli/: __init__.py  main.py  utils.py
story_toolkit/cli/commands/: __init__.py  character.py  dialogue.py  export.py  memory.py  story.py  template.py
story_toolkit/core/: __init__.py  character.py  plot.py  story_engine.py  world_builder.py
story_toolkit/exporters/: __init__.py  base.py  bionic.py  epub_exporter.py  html_exporter.py  pdf_exporter.py
story_toolkit/generators/: __init__.py  character_generator.py  dialogue_generator.py  plot_generator.py  story_generator.py
story_toolkit/llm/: __init__.py  base.py  factory.py
story_toolkit/llm/backends/: __init__.py  base.py  mock_backend.py
story_toolkit/memory/: __init__.py  base.py  memory_manager.py  models.py  sqlite_backend.py
story_toolkit/nlp/: __init__.py  coherence_checker.py  text_analyzer.py
story_toolkit/security/: __init__.py  sanitizer.py
story_toolkit/templates/: __init__.py  base.py  hero_journey.py  horror_cycle.py  manager.py  mystery_clues.py  romance_beat.py  three_act.py
story_toolkit/utils/: __init__.py  helpers.py
tests/: TEST_SUMMARY.md  __init__.py  conftest.py  run_all_security_tests.py  run_security_tests.py  test_all_modules.py  test_core.py  test_full_comprehensive.py  test_generators.py  test_helpers.py  test_integration.py  test_llm.py  test_nlp.py  test_story_toolkit.py  test_suite.py
tests/security/: __init__.py  test_command_injection.py  test_concurrent_access.py  test_dos_attack.py  test_memory_exhaustion.py  test_path_traversal.py  test_sensitive_data_leak.py  test_sql_injection.py  test_unicode_attacks.py  test_xss_prevention.py
tests/test_llm_quick/: test_advanced_dialogue.py  test_llm_assertions.py  test_llm_quick.py  test_openai_real.py  test_quick_verify.py
tests/v1/: __init__.py  test_core.py  test_generators.py  test_nlp.py
tests/v2/: __init__.py  test_llm.py  test_llm_backends.py  test_llm_core.py  test_llm_integration.py
tests/v2_1/: __init__.py  test_memory.py
tests/v2_2/: test_exporters.py
tests/v2_2_1/: test_templates.py
tests/v2_2_2/: test_cli.py
tests/v3/: test_memory.py
